--- a/package.json
+++ b/package.json
@@ -39,5 +39,13 @@
     "moment": "2.12.0",
     "moment-range": "2.2.0",
     "express-device": "0.4.2"
+  },
+  "devDependencies": {
+    "coveralls": "^2.11.12",
+    "istanbul": "^0.4.4"
+  },
+  "scripts": {
+    "test": "./node_modules/istanbul/lib/cli.js",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   }
 }
