--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "multer": "^0.1.8",
     "moment": "2.12.0",
     "moment-range": "2.2.0",
-    "express-device": "0.4.2"
+    "express-device": "0.4.2",
+    "bunyan": "^1.8.1",
+    "bunyan-format": "^0.2.1"
   },
   "devDependencies": {
     "coveralls": "^2.11.12",
