--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "siteTitle": "App-XLrater",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
     "express": "~4.0.0",
@@ -40,15 +41,15 @@
     "moment-range": "2.2.0",
     "express-device": "0.4.2",
     "bunyan": "^1.8.1",
-    "bunyan-format": "^0.2.1",
-    "grunt-build-control": "^0.7.1"
+    "bunyan-format": "^0.2.1"
   },
   "devDependencies": {
+    "grunt": "~0.4.5",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-istanbul": "^0.7.1",
     "grunt-minify-html": "^2.1.0",
-    "grunt-mocha-test": "^0.12.7"
+    "jasmine": "^2.4.1"
   }
 }
