--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,7 @@ condition: $BUILDCOMPLETE = true
 repo: appXL/appXL
 all_branches: true
 tags: true
-after_deploy:
-- cd appXL
+run:
 - npm start
 notifications:
 email: true
